[package]
name = "stock"
version = "0.1.0"
edition = "2021"

[dependencies]
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
crossterm = { version = "0.19", features = [ "serde" ] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"

#lazy_static = "1.4.0"
#directories-next = "2.0.0"
