[package]
name = "stock"
version = "1.0.0"
edition = "2021"

[dependencies]
#Log和SimpleLogger在TUI应用里看不到, 反而println!可以，尽管不好看
#log = "0.4"
#simple_logger = "1.16"

#crossterm支持windows,但性能比termion稍差，需要最新0.23版本，否则鼠标支持有问题
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
crossterm = { version = "0.23", features = [ "serde" ] }

serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 解决tui里中文宽度的计算
unicode-width = "0.1"

# reqwest太大了3M, ureq也有2M, http_req只有300k
http_req = "0.8"

# 查询跨平台的通用目录位置
dirs-next = "2.0"

#lazy_static = "1.4.0"
